syntax = "proto3";

package gimpel.v1;

option go_package = "github.com/nohaxxjustlags/gimpel/api/go/v1;gimpelv1";

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_CONNECTION_OPEN = 1;
  EVENT_TYPE_CONNECTION_CLOSE = 2;
  EVENT_TYPE_DATA_RECEIVED = 3;
  EVENT_TYPE_DATA_SENT = 4;
  EVENT_TYPE_AUTH_ATTEMPT = 5;
  EVENT_TYPE_COMMAND = 6;
  EVENT_TYPE_FILE_ACCESS = 7;
  EVENT_TYPE_MALWARE_DETECTED = 8;
  EVENT_TYPE_CUSTOM = 100;
}

message Event {
  string event_id = 1;
  string agent_id = 2;
  string module_id = 3;
  string session_id = 4;
  EventType type = 5;
  int64 timestamp_ns = 6;

  string source_ip = 10;
  uint32 source_port = 11;
  string dest_ip = 12;
  uint32 dest_port = 13;
  string protocol = 14;

  map<string, string> labels = 20;
  bytes payload = 21;
}

message EventBatch {
  string agent_id = 1;
  repeated Event events = 2;
}

message StreamEventsRequest {
  EventBatch batch = 1;
}

message StreamEventsResponse {
  int64 accepted_count = 1;
  repeated string failed_event_ids = 2;
}

service IngestionService {
  rpc StreamEvents(stream StreamEventsRequest) returns (StreamEventsResponse);
}
